force-app/main/default/objects/Property__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description
  >Dirección completa de la propiedad (calle, número, etc.).</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>