force-app/main/default/objects/Property__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description
  >Ciudad donde se ubica la propiedad. Se usa para agrupar y filtrar propiedades por ubicación.</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>