force-app/main/default/objects/Property__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Usuario interno responsable de la propiedad. Opcional: es un dato adicional de negocio, distinto del OwnerId estándar del registro.</description>
    <label>Property Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>