force-app/main/default/objects/Property__c/fields/Renovation_Status__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Status__c</fullName>
    <description
  >Estado de renovación de la propiedad. Valores: Not Started, In Progress, Completed.</description>
    <label>Renovation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>