force-app/main/default/objects/Property__c/fields/Room_Count__c.field-meta.xml
<CustomField>
    <fullName>Room_Count__c</fullName>
    <description
  >Cantidad de habitaciones asociadas a esta propiedad. Roll-Up Summary (COUNT) sobre Room__c, posible gracias a la relación Master-Detail Room__c.Property__c.</description>
    <label>Room Count</label>
    <summaryForeignKey>Room__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>