force-app/main/default/objects/Property__c/fields/Square_Meters__c.field-meta.xml
<CustomField>
    <fullName>Square_Meters__c</fullName>
    <description>Superficie de la propiedad en metros cuadrados.</description>
    <label>Square Meters</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>