force-app/main/default/objects/Property__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <description
  >Suma total de los gastos (Expense__c.Amount__c) asociados a esta propiedad. Roll-Up Summary (SUM), posible gracias a la relación Master-Detail Expense__c.Property__c.</description>
    <label>Total Expenses</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Property__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>