force-app/main/default/objects/Property__c/listViews/is_demo.listView-meta.xml
<ListView>
    <fullName>is_demo</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Demo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>is demo</label>
</ListView>